--- a/composition.html
+++ b/composition.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>构图方法</title>
-<link rel="stylesheet" href="css/composition.css">
+<link rel="stylesheet" href="css/daohang.css">
 	<style type="text/css">
 	*{padding:0; margin:0}
 	body{
@@ -63,20 +63,20 @@
 
 <body style="overflow-x:hidden;overflow-y:hidden">
 <div class="nav">
-	<div class="link1"><a href="" style="font-weight: bold;">构图</a>
+	<div class="link1"><a href="composition.html" style="font-weight: bold;"><u>Ⅰ构图</u></a>
 			<ul>
-			<li><a href="">裁剪工具</a></li>
-			<li><a href="">构图方法</a></li>
-			<li><a href="structure-test.html">构图练习</a></li>
+			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
+			<li><a href="yindao.html">构图方法</a></li>
+			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="" style="font-weight: bold;">调色</a>
+	<div class="link2"><a href="" style="font-weight: bold;">Ⅱ 调色</a>
 			<ul>
-			<li><a href="colourstyle.html">色调类型</a></li>
+			<li><a href="html/colourstyle.html">色调类型</a></li>
 			<li><a href="">调色练习</a></li>
 			</ul>
 	</div>
-	<div class="link3"><a href="" style="font-weight: bold;">测试</a>
+	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
 			<ul>
 			<li><a href="">理论选择题</a></li>
 			<li><a href="">综合运用</a></li>
@@ -86,13 +86,13 @@
 	
 <div class="whole">	 
 	<ul>
-		<li class="album"><a href="cposition1.html"><img border="10"  alt="" src="image/composition/03.jpg" onmouseout="this.src='image/composition/3.jpg'" onmouseover="this.src='image/composition/03.jpg" /></a></li>
+		<li class="album"><a href="yindao.html"><img border="10"  alt="" src="image/composition/03.jpg" onmouseout="this.src='image/composition/3.jpg'" onmouseover="this.src='image/composition/03.jpg" /></a></li>
 		<li class="album" id="over1">
-			<a href=" "><img  border="10" width="517px" alt="" src="image/composition/01.jpg" onmouseout="this.src='image/composition/1.jpg'" onmouseover="this.src='image/composition/01.jpg" /></a></li>
-			<li class="album" id="over3">
-			<a href=" "><img  border="10" width="287px" alt="" src="image/composition/04.jpg" onmouseout="this.src='image/composition/004.jpg'" onmouseover="this.src='image/composition/04.jpg" /></a></li>
+			<a href="sanfen.html"><img  border="10" width="517px" alt="" src="image/composition/01.jpg" onmouseout="this.src='image/composition/1.jpg'" onmouseover="this.src='image/composition/01.jpg" /></a></li>
+		<li class="album" id="over3">
+			<a href="duijiao.html"><img  border="10" width="287px" alt="" src="image/composition/04.jpg" onmouseout="this.src='image/composition/004.jpg'" onmouseover="this.src='image/composition/04.jpg" /></a></li>
 		<li class="album" id="over2">
-			<a href=" "><img  border="10" height="270" alt="" src="image/composition/02.jpg" onmouseout="this.src='image/composition/2.jpg'" onmouseover="this.src='image/composition/02.jpg" /></a></li>
+			<a href="duichen.html"><img  border="10" height="270" alt="" src="image/composition/02.jpg" onmouseout="this.src='image/composition/2.jpg'" onmouseover="this.src='image/composition/02.jpg" /></a></li>
 	</ul>
 	</div>
 	<script>
