--- a/html/structure-test.html
+++ b/html/structure-test.html
@@ -4,35 +4,37 @@
 <meta charset="utf-8">
 <title>构图练习</title>
 	<link rel="stylesheet" href="../css/structure-test.css">
+	
 	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 	<script language="JavaScript" type="text/javascript" src="../js/Untitled-1-js.js"></script>
 </head>
 
 <body>
-	<div class="nav">
-	<div class="link1"><a href="" style="font-weight: bold;">构图</a>
+<div class="nav">
+	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅰ构图</a>
 			<ul>
-			<li><a href="#">裁剪工具</a></li>
-			<li><a href="#">构图方法</a></li>
-			<li><a href="structure-test.html">构图练习</a></li>
+			<li><a href="PS-structure-video.html">裁剪工具</a></li>
+			<li><a href="../yindao.html">构图方法</a></li>
+			<li><a href="structure-test.html"><u>构图练习</u></a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="" style="font-weight: bold;">调色</a>
+	<div class="link2"><a href="" style="font-weight: bold;">Ⅱ 调色</a>
 			<ul>
 			<li><a href="colourstyle.html">色调类型</a></li>
 			<li><a href="">调色练习</a></li>
 			</ul>
 	</div>
-	<div class="link3"><a href="" style="font-weight: bold;">测试</a>
+	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
 			<ul>
 			<li><a href="">理论选择题</a></li>
 			<li><a href="">综合运用</a></li>
 			</ul>
 	</div>
 </div>
+	
 	<div class="container">
 		 <ul class="ul1" name="top">
-                    <li style="margin-top: 50px;">
+                    <li style="margin-top: 10px;">
                         1.三分法又称作(<span class="red">B</span> )<br>
                         <input type="radio" name="a1" value="A" class="a1"><span class="span1"> A.九宫格构图法</span><br>
                         <input type="radio" name="a1" value="B" class="a1"><span class="span1"> B.井字构图法</span><br>
@@ -93,8 +95,8 @@
 						</span>
                     </li><br><br>
 			 
-				<input type="button" class="button button-highlight button-pill button-large" style="width:68px;height: 36px;color:#000000;font-size: 17px;border: none;" value="提交" id="submit">
-		<button class="answer" style="height: 40px;color:#000000;font-size: 17px;border: none;" >
+				<input type="button" class="button button-highlight button-pill button-large" style="width:68px;height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" value="提交" id="submit">
+		<button class="answer" style="height: 40px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" >
 				 查看答案</button>
                
 			</ul>
