--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Transform and style the two planes
 			<img  border="10" height="270" alt=""src="image/DSC00606.png"/></a></li>
 			-->
 		</ul>
-		<p class="title1" id="t1">Photoshop<img src="image/title.jpg" width="400"><br></p>
+		<p class="title1" id="t1">Photoshop<img src="image/title.jpg" width="400" alt=""><br></p>
    
 <div id="nav">
 	<ul>
