--- a/html/colourstyle.html
+++ b/html/colourstyle.html
@@ -4,37 +4,23 @@
 <meta charset="utf-8">
 <title>色调类型</title>
 	<link rel="stylesheet" href="../css/colourstyle.css">
-	<style type="text/css">
-	body{
-		background-color:black;
-	}
-		p{
-			color: white;
-		}
-		h1{
-			color: white;
-		}
-		.title{
-			color: white;
-		}
-	</style>
 </head>
 <body>
 <div class="nav">
-	<div class="link1"><a href="" style="font-weight: bold;">构图</a>
+	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅰ构图</a>
 			<ul>
-			<li><a href="">裁剪工具</a></li>
-			<li><a href="">构图方法</a></li>
+			<li><a href="PS-structure-video.html">裁剪工具</a></li>
+			<li><a href="../yindao.html">构图方法</a></li>
 			<li><a href="structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="" style="font-weight: bold;">调色</a>
+	<div class="link2"><a href="" style="font-weight: bold;">Ⅱ 调色</a>
 			<ul>
-			<li><a href="colourstyle.html">色调类型</a></li>
+			<li><a href="colourstyle.html"><u>色调类型</u></a></li>
 			<li><a href="">调色练习</a></li>
 			</ul>
 	</div>
-	<div class="link3"><a href="" style="font-weight: bold;">测试</a>
+	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
 			<ul>
 			<li><a href="">理论选择题</a></li>
 			<li><a href="">综合运用</a></li>
@@ -93,6 +79,6 @@ run();
 		</div>
 		<span class="title">古风</span>
 	</div>
-	</div>
+</div>
 </body>
 </html>
