--- a/album.html
+++ b/album.html
@@ -7,7 +7,7 @@
 
   <title>图册</title>
 
- 
+      <link rel="stylesheet" href="css/daohang.css">
 	  <link rel="stylesheet" href="album/css/index.css" media="screen" type="text/css" />
 
     <link rel="stylesheet" href="album/css/style.css" media="screen" type="text/css" />
@@ -28,7 +28,30 @@
 </head>
 
 <body style="overflow-x:hidden;overflow-y:hidden">
-
+<div class="nav">
+	<div class="link1"><a href="composition.html" style="font-weight: bold;"><u>Ⅰ 构图</u></a>
+			<ul>
+			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
+			<li><a href="yindao.html">构图方法</a></li>
+			<li><a href="html/structure-test.html">构图练习</a></li>
+			</ul>
+	</div>
+	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
+			<ul>
+			<li><a href="html/colourstyle.html">色调类型</a></li>
+			<li><a href="html/colourstyle-test.html">调色练习</a></li>
+			</ul>
+	</div>
+	
+	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
+			<ul>
+			<li><a href="html/main-test.html">理论选择题</a></li>
+			<li><a href="apply.html">综合运用</a></li>
+			</ul>
+	</div>
+	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅳ 相册</a>
+	</div>
+</div>
 <div style="text-align:center;clear:both">
 <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
 <script src="/follow.js" type="text/javascript"></script>
