--- a/sanfen.html
+++ b/sanfen.html
@@ -9,29 +9,21 @@
 	<style type="text/css">
 	*{padding:0; margin:0}
 	body{
-		//background-color:rgb(69, 0, 183);
 		background-color:black;
 	}
-	.container{                           /*最大的div*/
-		/*width:1000px;*/
-		width:900px;
-		height:768px;
-		position:absolute;
-		right:0px;
-		background-color:black;
-	}
-	.whole{                           /*最大的div*/
-		/*width:1000px;*/
-		width:900px;
-		height:768px;
-		margin-left:120px;
+	.container{                   /*最大的div*/
+		width:850px;
+		height:100%;
+		display: flex;
+		margin: auto;
+		box-sizing: border-box;
 		position: relative;
-		background-color:black;
 	}
+	#whole{
+			margin: auto;
+		}
 	#pic{
-		width:660px;
-		border-width:10px;
-		padding-top:20px;
+		width:570px;
 	}
 	#des1{
 		width:550px;
@@ -49,6 +41,10 @@
 		//float: left;
 		list-style-type: none;
 	}
+	.color-1 
+	{ 
+		background: #8198A7;
+	}
 </style>
 		
 	</head>
@@ -64,32 +60,35 @@
 			
 		</div>
 <div class="nav">
-	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ构图</a>
+	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="yindao.html"><u>构图方法</u></a></li>
 			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
 			<ul>
 			<li><a href="html/colourstyle.html">色调类型</a></li>
-			<li><a href="">调色练习</a></li>
+			<li><a href="html/colourstyle-test.html">调色练习</a></li>
 			</ul>
 	</div>
+	
 	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
 			<ul>
-			<li><a href="">理论选择题</a></li>
-			<li><a href="">综合运用</a></li>
+			<li><a href="html/main-test.html">理论选择题</a></li>
+			<li><a href="apply.html">综合运用</a></li>
 			</ul>
 	</div>
+	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅳ 相册</a>
+	</div>
 </div>
-<div class="whole">
+<div class="container" >
 			
 			<section class="color-1">
 				
-				
-	<div class="container" >	
+	<div class="container">			
+	<div id="whole">	
 	<ul>
 		
 	<li><img id="pic"  src="image/composition/1.jpg"  alt=""></li>
@@ -117,6 +116,7 @@
 						</div>
 					</a>
 				</nav>
+				</div>
 			</section>
 			
 		</div>
