--- a/yindao.html
+++ b/yindao.html
@@ -8,78 +8,78 @@
 	<style type="text/css">
 	*{padding:0; margin:0}
 	body{
-		//background-color:rgb(69, 0, 183);
 		background-color:black;
 	}
-	.container{                           /*最大的div*/
-		/*width:1000px;*/
-		width:900px;
-		height:768px;
-		position:absolute;
-		right:0px;
-		background-color:black;
-	}
-	.whole{                           /*最大的div*/
-		/*width:1000px;*/
-		width:900px;
-		height:768px;
-		margin-left:120px;
+	.container{                   /*最大的div*/
+		width:850px;
+		height:100%;
+		display: flex;
+		margin: auto;
+		box-sizing: border-box;
 		position: relative;
-		background-color:black;
+		//background-color: wheat;
+		
 	}
 	#pic{
 		width:500px;
 		border-width:10px;
 	}
 	#des1{
-		width:350px;
-		margin-top:100px;
-		margin-left:20px;
+		margin-top:4%;
+		margin-left: 2%;
+		width:30%;
 		font-size:16px;
 		color:white;
 		line-height:1.8;
 		text-align: left;
-		
 	}
 	#des2{
-		width:350px;
-		margin-top:70px;
-		margin-left:20px;
-		font-size:16px;
-		color:white;
-		line-height:1.8;
-		text-align: left;
-		
+	margin-top:4%;
+	margin-left: 2%;
+	width:30%;
+	font-size: 16px;
+	color: white;
+	line-height: 1.8;
+	text-align: left;
+	//border-top: 10px solid #FFFFFF;
 	}
 	ul>li
 	{
 		float: left;
 		list-style-type: none;
 	}
-</style>
+	.color-1 
+	{ 
+		background: #8198A7;
+		border-right: 10px solid #FFFFFF;
+	}
+    </style>
 		
 	</head>
 	
 <body style="overflow-x:hidden;overflow-y:hidden">
-	<div class="nav">
-	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ构图</a>
+<div class="nav">
+	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="yindao.html"><u>构图方法</u></a></li>
 			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
 			<ul>
 			<li><a href="html/colourstyle.html">色调类型</a></li>
-			<li><a href="">调色练习</a></li>
+			<li><a href="html/colourstyle-test.html">调色练习</a></li>
 			</ul>
 	</div>
+	
 	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
 			<ul>
-			<li><a href="">理论选择题</a></li>
-			<li><a href="">综合运用</a></li>
+			<li><a href="html/main-test.html">理论选择题</a></li>
+			<li><a href="apply.html">综合运用</a></li>
 			</ul>
+	</div>
+	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅳ 相册</a>
 	</div>
 </div>
 	
@@ -94,9 +94,9 @@
 		</div>
 
 		
-<div class="whole">
-			
-			<section class="color-1">
+
+<div class="container" >		
+<section class="color-1">
 				
 				
 	<div class="container" >	
@@ -104,10 +104,11 @@
 		
 	<li><img id="pic"  src="image/composition/3.jpg"  alt=""></li>
 	<li id="des1"><h1>引导线</h1>
-		<p >什么是引导线？简单地说，引导线特征在于线条形状，例如道路或河流，以将观察者的眼睛吸引到照片的预期主体上。每当人们看到一幅图像时，我们的眼睛就会自然地被它内部的线条所吸引。我们本能地按照这些线条来看看它们走向何方-这些线条引领着我们对某个特定主题的注视。</p>
+		<p >简单地说，引导线特征在于线条形状，例如道路或河流，以将观察者的眼睛吸引到照片的预期主体上。每当人们看到一幅图像时，我们的眼睛就会自然地被它内部的线条所吸引。我们本能地按照这些线条来看看它们走向何方-这些线条引领着我们对某个特定主题的注视。</p>
 	</li>
+	
 	<li id="des2"><h1>引导线构图法</h1>
-		<p >即利用线条引导观者的目光，使之汇聚到画面的焦点。引导线可以是任何形式的直线、曲线、汇聚线、平行线、放射线等等。引导法可以引导视觉焦点，突出主体，烘托主题。还使画面更有空间感和纵深感。不仅能让人有身临其境的感觉，还能给画面添加美感，远近处的景物照相呼应，使画面整体饱满起来。</p>
+		<p >即利用线条引导观者的目光，使之汇聚到画面的焦点。引导线可以是任何形式的直线、曲线、汇聚线、平行线、放射线等等。引导法可以引导视觉焦点，突出主体，烘托主题。还使画面更有空间感和纵深感，远近处的景物照相呼应，使画面整体饱满起来。</p>
 	</li>
 	</ul>
 	</div>
@@ -129,9 +130,7 @@
 					</a>
 				</nav>
 			</section>
-			
-		</div>
-		
+				</div>	
 	</body>
 <!--<script type="text/javascript">
 var pre = document.getElementById("des");
