--- a/html/colourstyle.html
+++ b/html/colourstyle.html
@@ -4,48 +4,62 @@
 <meta charset="utf-8">
 <title>色调类型</title>
 	<link rel="stylesheet" href="../css/colourstyle.css">
+	<link rel="stylesheet" href="../css/daohang.css">
+	<style type="text/css">
+		#content1{
+			margin-top: 20%;
+		}
+	</style>
 </head>
 <body>
 <div class="nav">
-	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅰ构图</a>
+	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
 			<li><a href="PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="../yindao.html">构图方法</a></li>
 			<li><a href="structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
 			<ul>
 			<li><a href="colourstyle.html"><u>色调类型</u></a></li>
-			<li><a href="">调色练习</a></li>
+			<li><a href="colourstyle-test.html">调色练习</a></li>
 			</ul>
 	</div>
+	
 	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
 			<ul>
-			<li><a href="">理论选择题</a></li>
-			<li><a href="">综合运用</a></li>
+			<li><a href="main-test.html">理论选择题</a></li>
+			<li><a href="../apply.html">综合运用</a></li>
 			</ul>
+	</div>
+	<div class="link4"><a href="../album.html" style="font-weight: bold;">Ⅳ 相册</a>
 	</div>
 </div>
 <div class="container">
 	<div class="box">
-		<img src="../imgs/QQ图片20190629160640.png">
+		<img src="../imgs/01.jpg" alt="">
 		<div class="info" >
+			<a href="../japan.html" style="color:aliceblue">
 		<h1>日系</h1>
-		<p id="content1">在色彩方面，在调整图层中用饱和度工具降低饱和度。用曲线调整图层减少对比度，并提高整体亮度，对于过曝或高调区域可下拉曲线，注意是沿着右边输出线下拉。选取拍摄内容时，可留心明度高的色彩，组合成画面。当然你可以给照片加入淡淡的蓝色或是少许温暖的黄色，洋红色轻微加入也可有种胶片的色彩感觉，都可用曲线工具.</p>
-			<script type="text/javascript">
+		<p id="content1"  title="点击文字观看日系调色视频">1.在色彩方面，在调整图层中用饱和度工具降低饱和度。2.调整图层减少对比度，并提高整体亮度，对于过曝或高调区域可下拉曲线，注意是沿着右边输出线下拉。3.选取拍摄内容时，可留心明度高的色彩，组合成画面。4.可以给照片加入淡淡的蓝色或是少许温暖的黄色，洋红色轻微加入也可有种胶片的色彩感觉。</p>
+		<script type="text/javascript">
 				$(".box").on("mouseover",function(){
                     $(this).children(".info").fadeIn(1000);
                 });
 	</script>
+				</a>		
+			
 		</div>
 		<span class="title">日系</span>
 	</div>
+	
 	<div class="box">
-		<img src="../imgs/0106025d0e3526a801205e4be95a81.jpg@1280w_1l_2o_100sh.jpg">
+		<img  src="../imgs/0106025d0e3526a801205e4be95a81.jpg@1280w_1l_2o_100sh.jpg" alt="">
 		<div class="info" >
+		<a href="../hongkong.html" style="color:aliceblue">
 		<h1>港风</h1>
-		<p id="content2"> ① 明暗细节丰富（影调）港风胶片照片会保留更多高光和暗部的细节，亮部不曝暗部不暗，具有丰富的层次和更明显的对比，画面更加“精致细腻”，而人们往往都更喜欢清晰的，具有更多细节的视觉感。② 色彩细腻饱满（色调）在胶片的制造和冲洗过程中会使颜色发生偏移，我们常说的“色偏”，另外照片呈现的颜色比肉眼所见更加油润饱满。一般来说胶片的色彩并无特定唯一的风格，我们常见的色偏出现在绿色偏青色，亮部偏米黄、红色偏橙色等，而这些颜色都给人浓郁复古的感觉。</p>
+		<p id="content2" title="点击文字观看港风调色视频"> 1. 明暗细节丰富（影调）港风胶片照片会保留更多高光和暗部的细节，亮部不曝暗部不暗，具有丰富的层次和更明显的对比，画面更加“精致细腻”。2. 色彩细腻饱满（色调），制造胶片复古氛围，我们常见的色偏出现在绿色偏青色，亮部偏米黄、红色偏橙色等，而这些颜色都给人浓郁复古的感觉。</p>
 <!--<script type="text/javascript">
 var pre = document.getElementById("content2");
 var text = pre.innerText;
@@ -57,14 +71,16 @@ function run() {
 }
 run();
 </script>-->
+		</a>
 		</div>
 		<span class="title">港风</span>
 	</div>
 	<div class="box">
-		<img src="../imgs/QQ20190629161653.png">
+		<img  src="../imgs/02.jpg" alt="">
 		<div class="info" >
-		<h1>古风</h1>
-		<p id="content3"> 古风人像能让女孩仿佛古代女子一般唯美飘逸，古典韵味十足并且带有浓郁的中国古典文化风格元素。古风人像摄影不仅注重画面的古典，同时还需要和中国传统文化相结合，以求获得唯美的意境和细腻的画面感。古风人像和现代人像在拍摄手法上有很大的区别。拍摄现代人像时，为了突出人物，摄影师往往喜欢把背景虚化掉。但是古风人像不仅要突出人物，还需要人物和拍摄环境相结合，换句话来说就是环境人像。</p>
+			<a href="../europe.html" style="color:aliceblue">
+		<h1>欧美风</h1>
+		<p id="content3" title="点击文字观看欧美风调色视频">1.色彩通常比较艳丽，对比度较高，色彩的饱和度通常比较高，给人一种艳丽的感觉，因为色彩是很具有攻击性的。2.亮度较低欧美系摄影的亮度通常比较低，整个画面给人的感觉是略显压抑，充满着一种忧郁的气息。3.欧美系摄影都有那么一点儿胶片的味道，给人一种陈旧的感觉。</p>
 <!--<script type="text/javascript">
 var pre = document.getElementById("content3");
 var text = pre.innerText;
@@ -76,8 +92,9 @@ function run() {
 }
 run();
 </script>-->
+		</a>
 		</div>
-		<span class="title">古风</span>
+		<span class="title">欧美风</span>
 	</div>
 </div>
 </body>
