--- a/apply.html
+++ b/apply.html
@@ -9,6 +9,43 @@
 	<link rel="stylesheet" href="./apply_files/css">
     <link rel="stylesheet" href="css/daohang.css">
 	<style>
+		
+		.index a{
+		display: block;
+		width: 60px;
+		height: 40px;
+		z-index: 100;
+		position: absolute;
+		right: 150px;
+		top:18px;
+		/*border: 3px solid #FFFFFF;*/
+		border-radius: 5px;
+		font-size: 20px;
+		text-align: center;
+		line-height: 40px;
+		color:#000000;
+		text-decoration:none;
+		background-color:#FFFFFF;
+	}
+		.return a{
+		display: block;
+		width: 120px;
+		height: 40px;
+		z-index: 100;
+		position: absolute;
+		right: 10px;
+		top:18px;
+		/*border: 3px solid #FFFFFF;*/
+		border-radius: 5px;
+		font-size: 20px;
+		text-align: center;
+		line-height: 40px;
+		color:#000000;
+		text-decoration:none;
+		background-color:#FFFFFF;
+		}
+		
+		
 		h1 {
 			font-size: 2.5em;
 			margin: 0.7em 0;
@@ -26,6 +63,9 @@
 			line-height: 1.7
 		}
 		li{list-style:none;}
+		
+		
+		
 	</style>
 	<script>
 		var googletag = googletag || {};
@@ -34,7 +74,7 @@
 </head>
 
 <body class="theme0" style="overflow-x:hidden;overflow-y:hidden">
-<div class="nav">
+<!--<div class="nav">
 	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
@@ -57,7 +97,13 @@
 	</div>
 	<div class="link4"><a href="album.html" style="font-weight: bold;"><u>Ⅳ 相册</u></a>
 	</div>
-</div>
+</div>-->
+	<div class="index">
+	<a href="index.html">首页</a>
+	</div>
+	<div class="return">
+	<a href="html/main-test.html">返回上一页</a>
+	</div>
 	<div id="cap" style="display:none;"></div>
 	<div class="topfloat" style="display:none;"></div>
 	<script src="./apply_files/ext.1f549f71c429abda18.js.下载"></script>
