--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Transform and style the two planes
 		</li>
 		<li><a href="html/colourstyle.html">调色</a>
 		</li>
-		<li><a href="html/structure-test.html">测试</a>
+		<li><a href="html/main-test.html">测试</a>
 		</li>
 		<li><a href="album.html">相册</a>
 		</li>
