--- a/html/main-test.html
+++ b/html/main-test.html
@@ -9,15 +9,11 @@
 	<script language="JavaScript" type="text/javascript" src="../js/Untitled-1-js.js"></script>
 	
 	<style type="text/css">
-		#option{
+		#option1,#option2{
 			margin-left:30%;
 		}
 		.title{
-			margin-left: 16%;
-		}
-		#container{
-			width: 70%;
-			background-color: #8198A7;
+			margin-left: 20%;
 		}
 	
 	</style>
@@ -27,8 +23,8 @@
 	<div class="nav">
 	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
-			<li><a href="PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="../yindao.html">构图方法</a></li>
+			<li><a href="../video/ps-structurevideo.mp4">裁剪工具</a></li>
 			<li><a href="structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
@@ -50,10 +46,10 @@
 </div>
 	<div class="container">
 		 <ul class="ul1" name="top">
-			 <h1 align="center">综合理论练习题</h1>
-			 <div class="title" style="font-size: 22px;font-weight: bold">单选题</div>
+			 <h1 align="center" style="color: #000000">综合理论练习题</h1>
+			 <div class="title" style="font-size: 22px;font-weight: bold;color: #000000">单选题</div>
 			 <hr>
-			 <div id="option">
+			 <div id="option1">
                     <li style="margin-top: 10px;">
                         1.PS中裁剪工具快捷键是(<span class="red">B</span> )<br>
                         <input type="radio" name="a1" value="A" class="a1"><span class="span1"> A.【M】</span><br>
@@ -114,9 +110,10 @@
 						<img src="../imgs/4.JPG" width="80" height="60"></label>
 						</span>
                     </li><br><br>
-			 
-			 <div style="font-size: 22px;font-weight: bold">判断题</div>
+			 </div>
+			 <div class="title" style="font-size: 22px;font-weight: bold;color: #000000">判断题</div>
 			 <hr>
+			 <div id="option2">
 			 <li style="margin-top: 10px;">
                         1.欧美风滤镜应注意清晰度和锐度的调整<br>
                        <input type="radio" name="a6" value="A" class="a1"><span class="span1"> 正确</span><br>
@@ -147,15 +144,15 @@
                         <input type="radio" name="10" value="B" class="a1"><span class="span1"> 错误</span><br>
 				 		<span class="red">正确</span> 
                     </li><br><br>
-			 
+			 </div>
 				<input type="button" class="button button-highlight button-pill button-large" style="width:68px;height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" value="提交" id="submit">
-		<button class="answer" style="height: 40px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" >
+				<button class="answer" style="height: 40px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" >
 				 查看答案</button>
-               </div>
+              	<a class="practice" href="../apply.html" style="height: 40px;color:#000000;font-size: 20px;border: none;font-family: '楷体'" >
+				 实战演练</a>
 			</ul>
 		
-		
-	</div>
+	</div>	
 </body>
 </html>
 
