--- a/html/colourstyle-test.html
+++ b/html/colourstyle-test.html
@@ -85,8 +85,8 @@ $(function(){
 <div class="nav">
 	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
-			<li><a href="PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="../yindao.html">构图方法</a></li>
+			<li><a href="../video/ps-structurevideo.mp4">裁剪工具</a></li>
 			<li><a href="structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
