--- a/yindao.html
+++ b/yindao.html
@@ -51,7 +51,7 @@
 	.color-1 
 	{ 
 		background: #8198A7;
-		border-right: 10px solid #FFFFFF;
+		background:#313131;
 	}
     </style>
 		
@@ -61,8 +61,8 @@
 <div class="nav">
 	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
-			<li><a href="yindao.html">构图方法</a></li>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
+			<li><a href="yindao.html"><u>构图方法</u></a></li>
 			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
