--- a/album.html
+++ b/album.html
@@ -29,7 +29,7 @@
 
 <body style="overflow-x:hidden;overflow-y:hidden">
 <div class="nav">
-	<div class="link1"><a href="composition.html" style="font-weight: bold;"><u>Ⅰ 构图</u></a>
+	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
 			<ul>
 			<li><a href="yindao.html">构图方法</a></li>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
@@ -49,7 +49,7 @@
 			<li><a href="apply.html">综合运用</a></li>
 			</ul>
 	</div>
-	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅳ 相册</a>
+	<div class="link4"><a href="album.html" style="font-weight: bold;"><u>Ⅳ 相册</u></a>
 	</div>
 </div>
 <div style="text-align:center;clear:both">
