--- a/duichen.html
+++ b/duichen.html
@@ -31,7 +31,7 @@
 		padding-top:10px; 
 		font-size:16px;
 		color:white;
-		line-height:1.8;
+		line-height:1.5;
 		text-align: left;
 		
 	}
@@ -95,7 +95,9 @@
 	<div id="whole">
 	<ul>	
 	<li><img id="pic"  src="image/composition/2.jpg"  alt=""></li>
-	<li id="des1"><h1>对称构图法</h1>
+	<li id="des1">
+	<audio src="music/duichen.3gpp" controls style="width: 100%;">Your browser does not support the audio element.</audio>
+	<h1>对称构图法</h1>
 		<p id="sanfen">对称构图即按照一定的对称轴或对称中心，使画面中景物形成轴对称或者中心对称。
 对称法常与中心构图联合使用，让对称中心位于画面中心，或使对称轴通过画面中心。
 对称构图有上下对称、左右对称等，具有稳定平衡的特点。
