--- a/duijiao.html
+++ b/duijiao.html
@@ -27,7 +27,7 @@
 	}
 	#des1{
 		position: absolute;
-		top:28%;
+		top:26%;
 		left:59%;
 		width:30.6%;
 		font-size:16px;
@@ -94,7 +94,12 @@
 	<ul>
 		
 	<li><img id="pic"  src="image/composition/4.jpg"  alt=""></li>
-	<li id="des1"><h1>对角线构图</h1>
+	
+		
+		<li id="des1">
+		<audio src="music/duijiao.3gpp" controls style="width: 100%; margin-bottom:10px">Your browser does not support the audio element.</audio>
+		
+		<h1>对角线构图</h1>
 		<p >对角线构图其实是引导线构图的一类，将画面中的线条沿对角线方向展布，形成了对角线构图。
 <br>沿对角线展布的线条可以是直线，也可以是曲线、折线或物体的边缘，只要整体延伸方向与画面对角线方向接近，就可以视为对角线构图。
 <br>水平线垂直线让人觉得稳重平衡，当线条倾斜后会让人感觉生动有趣，同时引导视线。</p>
