--- a/sanfen.html
+++ b/sanfen.html
@@ -23,7 +23,7 @@
 			margin: auto;
 		}
 	#pic{
-		width:570px;
+		width:560px;
 	}
 	#des1{
 		width:550px;
@@ -31,7 +31,7 @@
 		padding-top:10px; 
 		font-size:16px;
 		color:white;
-		line-height:1.8;
+		line-height:1.5;
 		text-align: left;
 		
 	}
@@ -93,7 +93,10 @@
 	<ul>
 		
 	<li><img id="pic"  src="image/composition/1.jpg"  alt=""></li>
-	<li id="des1"><h1>三分法</h1>
+	
+	<li id="des1">
+	<audio src="music/sanfen.3gpp" controls style="width: 100%;">Your browser does not support the audio element.</audio>
+	<h1>三分法</h1>
 		<p id="sanfen">摄影三分法是一种在摄影、绘画、设计等艺术中经常使用的构图手段
 			<br>有时也称作<b>井字构图法</b>
 			<br>三分法要求把画面横直都分为三等分，共划分九格，画面出现两直两横的垂直及水平线，产生四个交叉点，该理论就是要求把主体安排在四个交错点上，原因是这四个交错点最易吸引目光，而且画面的垂直及水平主线（明显或暗线）都要安排在四条横直线上</p>
