--- a/html/colourstyle.html
+++ b/html/colourstyle.html
@@ -41,6 +41,7 @@
 		<img src="../imgs/01.jpg" alt="">
 		<div class="info" >
 			<a href="../japan.html" style="color:aliceblue">
+		<audio src="../music/japan.3gpp" controls style="width: 90%; margin-bottom: 20px;">Your browser does not support the audio element.</audio>
 		<h1>日系</h1>
 		<p id="content1"  title="点击文字观看日系调色视频">1.在色彩方面，在调整图层中用饱和度工具降低饱和度。2.调整图层减少对比度，并提高整体亮度，对于过曝或高调区域可下拉曲线，注意是沿着右边输出线下拉。3.选取拍摄内容时，可留心明度高的色彩，组合成画面。4.可以给照片加入淡淡的蓝色或是少许温暖的黄色，洋红色轻微加入也可有种胶片的色彩感觉。</p>
 		<script type="text/javascript">
@@ -58,6 +59,7 @@
 		<img  src="../imgs/0106025d0e3526a801205e4be95a81.jpg@1280w_1l_2o_100sh.jpg" alt="">
 		<div class="info" >
 		<a href="../hongkong.html" style="color:aliceblue">
+		<audio src="../music/hongkong.3gpp" controls style="width: 90%; margin-bottom: 20px;">Your browser does not support the audio element.</audio>
 		<h1>港风</h1>
 		<p id="content2" title="点击文字观看港风调色视频"> 1. 明暗细节丰富（影调）港风胶片照片会保留更多高光和暗部的细节，亮部不曝暗部不暗，具有丰富的层次和更明显的对比，画面更加“精致细腻”。2. 色彩细腻饱满（色调），制造胶片复古氛围，我们常见的色偏出现在绿色偏青色，亮部偏米黄、红色偏橙色等，而这些颜色都给人浓郁复古的感觉。</p>
 <!--<script type="text/javascript">
@@ -79,6 +81,7 @@ run();
 		<img  src="../imgs/02.jpg" alt="">
 		<div class="info" >
 			<a href="../europe.html" style="color:aliceblue">
+		<audio src="../music/europe.3gpp" controls style="width: 90%; margin-bottom: 20px;">Your browser does not support the audio element.</audio>
 		<h1>欧美风</h1>
 		<p id="content3" title="点击文字观看欧美风调色视频">1.色彩通常比较艳丽，对比度较高，色彩的饱和度通常比较高，给人一种艳丽的感觉，因为色彩是很具有攻击性的。2.亮度较低欧美系摄影的亮度通常比较低，整个画面给人的感觉是略显压抑，充满着一种忧郁的气息。3.欧美系摄影都有那么一点儿胶片的味道，给人一种陈旧的感觉。</p>
 <!--<script type="text/javascript">
