--- a/yindao.html
+++ b/yindao.html
@@ -30,7 +30,7 @@
 		width:30%;
 		font-size:16px;
 		color:white;
-		line-height:1.8;
+		line-height:1.6;
 		text-align: left;
 	}
 	#des2{
@@ -39,7 +39,7 @@
 	width:30%;
 	font-size: 16px;
 	color: white;
-	line-height: 1.8;
+	line-height: 1.6;
 	text-align: left;
 	//border-top: 10px solid #FFFFFF;
 	}
@@ -103,7 +103,9 @@
 	<ul>
 		
 	<li><img id="pic"  src="image/composition/3.jpg"  alt=""></li>
-	<li id="des1"><h1>引导线</h1>
+	<li id="des1">
+	<audio src="music/yindao.3gpp" controls style="width: 100%; margin-bottom: 10px;">Your browser does not support the audio element.</audio>
+	<h1>引导线</h1>
 		<p >简单地说，引导线特征在于线条形状，例如道路或河流，以将观察者的眼睛吸引到照片的预期主体上。每当人们看到一幅图像时，我们的眼睛就会自然地被它内部的线条所吸引。我们本能地按照这些线条来看看它们走向何方-这些线条引领着我们对某个特定主题的注视。</p>
 	</li>
 	
